# playwright-use

./: ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
core/: executor.py  healer.py  llm.py  oracle.py  planner.py  reporter.py  util.py
fixtures/: aliases.yaml  sample.txt
goals/: iframesTest.goal.yaml  login.goal.yaml  widget.goal.yaml
playwright_use/: cli.py
