[metadata]
name = playwright-use
version = 0.1.2
description = Natural-language UI test runner
long_description = file: README.md
long_description_content_type = text/markdown
author = Toni Ramchandani
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = main
install_requires =
    playwright>=1.43
    jinja2>=3.1
    python-dotenv>=1.0
    PyYAML>=6.0
    openai>=0.28
python_requires = >=3.9
include_package_data = True

[options.extras_require]
anthropic = anthropic>=0.34
groq = groq>=0.8

[options.entry_points]
console_scripts =
    playwright-use = main:main
    playwright-use = playwright_use.cli:main
